This is a sample Write into same exchange different queue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
-spring.cloud.stream.bindings.privin.group=sampleGroup
+spring.cloud.stream.bindings.privin.group=sampleGroupIn
 spring.cloud.stream.bindings.privin.destination=exchangeName
+spring.cloud.stream.rabbit.bindings.privin.consumer.bindingRoutingKey=carshare.user.created
+
+
+spring.cloud.stream.bindings.privout.group=sampleGroupOut
+spring.cloud.stream.bindings.privout.destination=exchangeName
+spring.cloud.stream.rabbit.bindings.privout.producer.routingKeyExpression='profile.user.created'
